<resources>
    <string name="app_name">BMI Calculator</string>
    <string name="calculate">Calculate</string>
    <string name="enter_height_in_cm">Enter height in cm</string>
    <string name="enter_weight_in_kg">Enter weight in kg</string>
    <string name="enter_age">Enter age</string>
    <string name="gender">Gender</string>
    <string name="years">years</string>
    <string name="bmi_calculator">BMI Calculator</string>
</resources>